[package]
name = "blazing-bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
crossterm = "0.26.1"
enum-iterator = "1.2.0"
futures = "0.3.25"
hex = "0.4.3"
secp256k1 = "0.21"
tokio = { version = "1.24.1", features = ["full"] }
tui = { version = "0.19.0", features = ["serde"] }
tuirealm = "^1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
md5 = "0.7.0"
crossbeam = "0.8.1"
backtrace = "0.3.67"
bigdecimal = "0.3.0"
inquire = { version = "0.6.2" }
async-recursion = "1.0.4"
hex-literal = "0.4.1"
rand = "0.8.5"
yansi = "0.5.1"
lazy_static = "1.4.0"
ethers = { version = "2.0.4", features = ["ws"] }
indicatif = "0.17.5"
console = "0.15.7"
once_cell = "1.18.0"
reqwest = "0.11.18"
revm = { version = "3.3.0", features = [
  "ethers-providers",
  "ethers-core",
  "tokio",
  "ethersdb",
] }
bytes = "1.4.0"
ethers-contract = "2.0.7"
